--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,31 @@ td
     background-color: transparent;
 }
 
+.mydiv {
+    background-color: #282d33;
+    color: #ffffff;
+    text-align: center;
+    line-height: 40px;
+    font-size: 18px;
+    font-weight: bold;
+    z-index: 999;
+    width: 400px;
+    height: 200px;
+    left: 50%;
+    top: 50%;
+    margin-left: -200px!important;
+    /*FF IE7 该值为本身宽的一半 */
+    margin-top: -100px!important;
+    /*FF IE7 该值为本身高的一半*/
+    margin-top: 0px;
+    position: fixed!important;
+    /* FF IE7*/
+    position: absolute;
+    /*IE6*/
+    _top: expression(eval(document.compatMode && document.compatMode=='CSS1Compat') ? documentElement.scrollTop + (document.documentElement.clientHeight-this.offsetHeight)/2:document.body.scrollTop + (document.body.clientHeight - this.clientHeight)/2);
+    /*IE5 IE5.5*/
+}
+
 .mydiv span {
     position: relative;
     display: block;
